messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  labels:
    app.kubernetes.io/name: web-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: django.minikube.local
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: web
            port: 
              number: 80
